--- a/index.html
+++ b/index.html
@@ -4,35 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <!-- CSS only -->
     <title>Document</title>
 </head>
 <body>
-     <nav id="navbar" class="navbar navbar-dark navbar-expand-sm navbar-collepsed bg-primary fixed-top nav-sticky">
-        <div class="container">
-            <a class="navbar-brand" href="#">Asadullah Khan Web Developer</a>
-            <ul class="navbar-nav mr-auto">
-                <li class="navbar-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="navbar-item"><a class="nav-link" href="#">Project</a></li>
-                <li class="navbar-item"><a class="nav-link" href="#">Contact</a></li>
-            </ul>
-        </div>
-    </nav> -->
-    <div id="welcome-section" class="container-fluid text-center">
-        <h1>HI! Im Asadullah Khan</h1>
-        <p>Web Developer</p>
-    </div>
-    <div id="" class="container">
-        <div class="row">
-            <div class="col-12 col-sm-2 col-md-4"><a href="#"><img src="" alt=""></a></div>
-            <div class="col-12 col-sm-2 col-md-4"></div>
-            <div class="col-12 col-sm-2 col-md-4"></div>
-        </div>
-    </div>
-    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script src="./node_modules/@popperjs/core/dist/cjs/popper.js"></script>
+
+<!-- 
+
+Hello Camper!
+
+For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
+
+- The freeCodeCamp Team 
+
+-->
+
+<nav id="navbar">
+  <a class="navbar-link" href="#tribute_page" alt="Link to tribute page">Tribute Page</a>
+  <a class="navbar-link" href="#survey_form" alt="Link to survey form">Survey Form</a>
+  <a class="navbar-link" href="#product_landing_page" alt="Link to product landing page">Product Landing Page</a>
+  <a class="navbar-link" href="#technical_documentation_page" alt="Link to technical documentation page">Technical Documentation Page</a>
+</nav>
+<div id="welcome-section">
+  <h1>Welcome to my personal portfolio!</h1>
+</div>
+<div id="projects">
+  <h2>These are some of my projects</h2>
+  <a class="project-tile" href="https://codepen.io/SeanFl42/pen/gjLYgE" target="_blank">
+    Tribute Page
+  </a>
+  <a id="tribute_page" class="project-tile" href="https://codepen.io/SeanFl42/pen/OwRgNb" alt="Survey form" target="_blank">
+    Survey Form
+  </a>
+  <a id="survey_form" class="project-tile" href="https://codepen.io/SeanFl42/pen/YjpMEZ" target="_blank">
+    Product Landing Page
+  </a>
+  <a id="product_landing_page" class="project-tile" href="https://codepen.io/SeanFl42/pen/qyPvGr" target="_blank">
+    Technical Documentation Page
+  </a>
+  <hr>
+  <br>
+  <a id="profile-link" href="https://github.com/SeanFl42" target="_blank">My GitHub Page</a>
+</div>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
