--- a/index.html
+++ b/index.html
@@ -4,49 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/css/style.css">
+
     <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-<!-- 
-
-Hello Camper!
-
-For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
-
-- The freeCodeCamp Team 
-
--->
-
-<nav id="navbar">
-  <a class="navbar-link" href="#tribute_page" alt="Link to tribute page">Tribute Page</a>
-  <a class="navbar-link" href="#survey_form" alt="Link to survey form">Survey Form</a>
-  <a class="navbar-link" href="#product_landing_page" alt="Link to product landing page">Product Landing Page</a>
-  <a class="navbar-link" href="#technical_documentation_page" alt="Link to technical documentation page">Technical Documentation Page</a>
-</nav>
-<div id="welcome-section">
-  <h1>Welcome to my personal portfolio!</h1>
-</div>
-<div id="projects">
-  <h2>These are some of my projects</h2>
-  <a class="project-tile" href="https://codepen.io/SeanFl42/pen/gjLYgE" target="_blank">
-    Tribute Page
-  </a>
-  <a id="tribute_page" class="project-tile" href="https://codepen.io/SeanFl42/pen/OwRgNb" alt="Survey form" target="_blank">
-    Survey Form
-  </a>
-  <a id="survey_form" class="project-tile" href="https://codepen.io/SeanFl42/pen/YjpMEZ" target="_blank">
-    Product Landing Page
-  </a>
-  <a id="product_landing_page" class="project-tile" href="https://codepen.io/SeanFl42/pen/qyPvGr" target="_blank">
-    Technical Documentation Page
-  </a>
-  <hr>
-  <br>
-  <a id="profile-link" href="https://github.com/SeanFl42" target="_blank">My GitHub Page</a>
-</div>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Asadulla Khan</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div> 
+  </nav>
+     
+  
+  
+  <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+      <script src="./node_modules/jquery/dist/jquery.slim.js"></script>
+      <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
+      <script src="./node_modules/bootstrap/js/dist/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
-</html>
