--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto ">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Projects</a>
@@ -37,7 +37,7 @@
     </div> 
   </nav>
   <!-- Content Container  / Home-->
-     <div class="container home-container">
+     <div class="container home-container" id="home">
       <div class="row row-content">
         <div class="col-12 col-sm-6">
             <img src="./img/18057096_404656693241691_1606362937793335477_n.jpg" class="mt-5 mb-5" alt="Author Image" width="400px" height="400px">
