Project Section Completed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Asadullah Khan</a>
+      <a class="navbar-brand" href="#home">Asadullah Khan</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,7 +27,7 @@
             <a class="nav-link" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -42,7 +42,7 @@
         <div class="col-12 col-sm-6">
             <img src="./img/18057096_404656693241691_1606362937793335477_n.jpg" class="mt-5 mb-5" alt="Author Image" width="400px" height="400px">
         </div>
-        <div class="col-12 col-sm-6 text-center mt-5 mb-5">
+        <div class="col-12 col-sm-6 text-center grid">
         
             <h1>Asadullah Khan The 
               <span class="txt-type "  data-wait="2000" data-words='["Developer", "Designer", "Student"]'></span>
@@ -52,7 +52,44 @@
         </div>
       </div>
      </div>
-  
+     <!-- Projects  -->
+     <div class="container" id="projects">
+       <div class="row header text-center">
+        <div class="col-12 col-sm-12">
+          <h1>Projects</h1>
+        </div>
+       </div>
+       <div class="row row-content text-center">
+        <div class="col-12 col-sm-4  gridcolor" >
+              <h4>Expense Tracker App</h4>
+              <a href="http://expense-app-by-asad-khan.surge.sh/" target="_blank"><img src="./img/screencapture-expense-app-by-asad-khan-surge-sh-2021-04-13-23_20_38.png" width="300px " height="300px" alt=""></a>
+        </div>
+        <div class="col-12 col-sm-4 gridcolor" >
+          <h4>Covid-Tracker App</h4>
+          <a href="http://covid-tracker-by-asadullahkhan.surge.sh/" target="_blank"><img src="./img/screencapture-covid-tracker-by-asadullahkhan-surge-sh-2021-04-13-23_19_58.png" width="300px " height="300px" alt=""></a>
+    </div>
+    <div class="col-12 col-sm-4 gridcolor" >
+      <h4>Shoe Store App</h4>
+      <a href="http://shoe-store-by-asadullahkhan.surge.sh/" target="_blank"><img src="./img/screencapture-shoe-store-by-asadullahkhan-surge-sh-product-2021-04-13-23_21_13.png" width="300px " height="300px" alt=""></a>
+    </div>
+      </div>
+
+      <div class="row row-content text-center">
+        <div class="col-12 col-sm-4  gridcolor" >
+              <h4>Expense Tracker App</h4>
+              <a href="http://expense-app-by-asad-khan.surge.sh/" target="_blank"><img src="./img/screencapture-expense-app-by-asad-khan-surge-sh-2021-04-13-23_20_38.png" width="300px " height="300px" alt=""></a>
+        </div>
+        <div class="col-12 col-sm-4 gridcolor" >
+          <h4>Covid-Tracker App</h4>
+          <a href="http://covid-tracker-by-asadullahkhan.surge.sh/" target="_blank"><img src="./img/screencapture-covid-tracker-by-asadullahkhan-surge-sh-2021-04-13-23_19_58.png" width="300px " height="300px" alt=""></a>
+    </div>
+    <div class="col-12 col-sm-4 gridcolor" >
+      <h4>Shoe Store App</h4>
+      <a href="http://shoe-store-by-asadullahkhan.surge.sh/" target="_blank"><img src="./img/screencapture-shoe-store-by-asadullahkhan-surge-sh-product-2021-04-13-23_21_13.png" width="300px " height="300px" alt=""></a>
+    </div>
+      </div>
+     </div>
+     
   
   <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
   <script src="./js/index.js"></script>
